// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders message box when commenting disabled 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-unauthenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="Box-root Flex-root coral coral-viewerBox Flex-flex Flex-wrap Flex-alignCenter"
      >
        <span
          className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
        >
          Join the conversation
        </span>
        <div
          className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
        >
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Register
          </button>
          <button
            className="BaseButton-root Button-base Button-outlined Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase coral coral-viewerBox-signInButton"
            data-variant="outlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in
          </button>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-double"
      >
        <div
          className="CallOut-root CallOut-mono CallOut-leftBorder coral coral-createComment-closed"
        >
          <div
            className="CallOut-container"
          >
            <div
              className="CallOut-icon CallOut-mono CallOut-leftIcon"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon"
              >
                feedback
              </i>
            </div>
            <div
              className="CallOut-content"
            >
              <div
                className="CallOut-title CallOut-titleBold"
              >
                <div
                  className="Markdown-root"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<p>Commenting disabled</p>
",
                    }
                  }
                />
              </div>
              <div
                className="CallOut-body"
              />
            </div>
          </div>
        </div>
        <div
          className="coral coral-createComment"
        >
          <div
            className="MessageBox-root coral coral-createComment-message"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-md coral coral-icon MessageBoxIcon-root"
            >
              chat
            </i>
            <div
              className="Markdown-root MessageBoxContent-root MessageBoxContainer-withIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p><strong>What do you think</strong>?</p>
",
                }
              }
            />
          </div>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon"
              >
                expand_more
              </i>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div
          aria-live="off"
          className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        >
          <div
            className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
          >
            <div
              className="CallOut-inner"
            >
              There are no comments yet. Why don't you write one?
            </div>
          </div>
          <div
            data-virtuoso-scroller={true}
            style={
              Object {
                "height": 0,
                "position": "relative",
              }
            }
          >
            <div
              data-viewport-type="window"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                data-test-id="virtuoso-item-list"
                style={
                  Object {
                    "boxSizing": "border-box",
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  }
                }
              />
              <div />
            </div>
          </div>
          <nav
            aria-label="Comments Footer"
            className="CommentsLinks-container coral coral-streamFooter"
          >
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of comments"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                forum
              </i>
              <span>
                Top of comments
              </span>
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of article"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                description
              </i>
              <span>
                Top of article
              </span>
            </button>
          </nav>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when logged in 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-authenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="coral coral-viewerBox"
      >
        <div
          className="UserBoxAuthenticated-text coral coral-viewerBox-usernameLabel"
        >
          Signed in as
        </div>
        <div
          className="Box-root Flex-root coral coral-viewerBox-usernameContainer Flex-flex Flex-wrap Flex-alignFlexEnd"
        >
          <div
            className="coral coral-viewerBox-username UserBoxAuthenticated-username"
          >
            Markus
          </div>
          <span
            className="UserBoxAuthenticated-text UserBoxAuthenticated-signOut"
          >
            Not you? 
            <button
              className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-colorPrimary Button-underline UserBoxAuthenticated-userBoxButton coral coral-viewerBox-logoutButton"
              data-variant="flat"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              Sign Out
            </button>
          </span>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-double"
      >
        <div
          className="coral coral-createComment"
          id="post-comment-form"
        >
          <div
            className="MessageBox-root coral coral-createComment-message PostCommentForm-messageBox"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-md coral coral-icon MessageBoxIcon-root"
            >
              chat
            </i>
            <div
              className="Markdown-root MessageBoxContent-root MessageBoxContainer-withIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p><strong>What do you think</strong>?</p>
",
                }
              }
            />
          </div>
          <div
            className="coral coral-createComment"
          >
            <form
              autoComplete="off"
              id="comments-postCommentForm-form"
              onSubmit={[Function]}
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <div>
                  <label
                    className="AriaInfo-root"
                    htmlFor="comments-postCommentForm-field"
                  >
                    Post a comment
                  </label>
                  <div
                    className="CommentForm-commentFormBox CommentForm-noTopBorder coral coral-commentForm"
                  >
                    <div
                      role="none"
                    >
                      <div
                        className="coral coral-rte"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                        >
                          <div
                            aria-placeholder="Post a comment"
                            className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                            id="comments-postCommentForm-field"
                          />
                          <div
                            aria-hidden="true"
                            className="RTE.module-placeholder coral coral-rte-placeholder RTE-placeholder"
                          >
                            Post a comment
                          </div>
                        </div>
                        <div
                          className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                        >
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Bold"
                            type="button"
                          >
                            <i
                              aria-hidden="true"
                              className="Icon-root Icon-md coral coral-icon"
                            >
                              format_bold
                            </i>
                          </button>
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Italic"
                            type="button"
                          >
                            <i
                              aria-hidden="true"
                              className="Icon-root Icon-md coral coral-icon"
                            >
                              format_italic
                            </i>
                          </button>
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Blockquote"
                            type="button"
                          >
                            <i
                              aria-hidden="true"
                              className="Icon-root Icon-md coral coral-icon"
                            >
                              format_quote
                            </i>
                          </button>
                          <button
                            aria-pressed={false}
                            className="BaseButton-root RTEButton-button"
                            disabled={false}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            onTouchEnd={[Function]}
                            title="Bulleted List"
                            type="button"
                          >
                            <i
                              aria-hidden="true"
                              className="Icon-root Icon-md coral coral-icon"
                            >
                              format_list_bulleted
                            </i>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd gutter Flex-spacing-1"
                >
                  <button
                    className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-disabled Button-upperCase coral coral-createComment-submit"
                    data-variant="filled"
                    disabled={true}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="submit"
                  >
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon"
              >
                expand_more
              </i>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div
          aria-live="off"
          className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        >
          <div
            className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
          >
            <div
              className="CallOut-inner"
            >
              There are no comments yet. Why don't you write one?
            </div>
          </div>
          <div
            data-virtuoso-scroller={true}
            style={
              Object {
                "height": 0,
                "position": "relative",
              }
            }
          >
            <div
              data-viewport-type="window"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                data-test-id="virtuoso-item-list"
                style={
                  Object {
                    "boxSizing": "border-box",
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  }
                }
              />
              <div />
            </div>
          </div>
          <nav
            aria-label="Comments Footer"
            className="CommentsLinks-container coral coral-streamFooter"
          >
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-profileLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to profile and replies"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                account_box
              </i>
              <span>
                Profile & Replies
              </span>
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of comments"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                forum
              </i>
              <span>
                Top of comments
              </span>
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of article"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                description
              </i>
              <span>
                Top of article
              </span>
            </button>
          </nav>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when not logged in 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-unauthenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="Box-root Flex-root coral coral-viewerBox Flex-flex Flex-wrap Flex-alignCenter"
      >
        <span
          className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
        >
          Join the conversation
        </span>
        <div
          className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
        >
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Register
          </button>
          <button
            className="BaseButton-root Button-base Button-outlined Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase coral coral-viewerBox-signInButton"
            data-variant="outlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in
          </button>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="coral coral-createComment"
        id="post-comment-form"
      >
        <div
          className="MessageBox-root coral coral-createComment-message PostCommentFormFake-messageBox"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-md coral coral-icon MessageBoxIcon-root"
          >
            chat
          </i>
          <div
            className="Markdown-root MessageBoxContent-root MessageBoxContainer-withIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><strong>What do you think</strong>?</p>
",
              }
            }
          />
        </div>
        <div
          className="Box-root HorizontalGutter-root PostCommentFormFake-root HorizontalGutter-full"
        >
          <div
            className="PostCommentFormFake-rteContainer coral coral-rte-fake-container"
          >
            <div
              role="none"
            >
              <div
                className="coral coral-rte"
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  className="RTE.module-contentEditableContainer RTE-container coral coral-rte-container"
                >
                  <div
                    aria-placeholder="Post a comment"
                    className="RTE.module-contentEditable coral coral-rte-content RTE-content"
                  />
                  <div
                    aria-hidden="true"
                    className="RTE.module-placeholder coral coral-rte-placeholder RTE-placeholder"
                  >
                    Post a comment
                  </div>
                </div>
                <div
                  className="coral coral-rte-toolbar RTE-toolbar RTE.module-toolbarBottom Toolbar.module-toolbar"
                >
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Bold"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-md coral coral-icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Italic"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-md coral coral-icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Blockquote"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-md coral coral-icon"
                    >
                      format_quote
                    </i>
                  </button>
                  <button
                    aria-pressed={false}
                    className="BaseButton-root RTEButton-button"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    title="Bulleted List"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-md coral coral-icon"
                    >
                      format_list_bulleted
                    </i>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-fullWidth coral coral-createComment-signIn"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="submit"
          >
            Sign in and Join the Conversation
          </button>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon"
              >
                expand_more
              </i>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div
          aria-live="off"
          className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        >
          <div
            className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
          >
            <div
              className="CallOut-inner"
            >
              There are no comments yet. Why don't you write one?
            </div>
          </div>
          <div
            data-virtuoso-scroller={true}
            style={
              Object {
                "height": 0,
                "position": "relative",
              }
            }
          >
            <div
              data-viewport-type="window"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                data-test-id="virtuoso-item-list"
                style={
                  Object {
                    "boxSizing": "border-box",
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  }
                }
              />
              <div />
            </div>
          </div>
          <nav
            aria-label="Comments Footer"
            className="CommentsLinks-container coral coral-streamFooter"
          >
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of comments"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                forum
              </i>
              <span>
                Top of comments
              </span>
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of article"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                description
              </i>
              <span>
                Top of article
              </span>
            </button>
          </nav>
        </div>
      </section>
    </div>
  </div>
</section>
`;

exports[`renders message box when story isClosed 1`] = `
<section
  aria-labelledby="tab-COMMENTS"
  className="App-tabContent coral coral-comments"
  data-testid="current-tab-pane"
  id="tabPane-COMMENTS"
>
  <div
    className="Box-root HorizontalGutter-root StreamContainer-root coral coral-unauthenticated HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-wrap Flex-justifySpaceBetween Flex-alignFlexStart"
    >
      <section
        aria-label="Authentication"
        className="Box-root Flex-root coral coral-viewerBox Flex-flex Flex-wrap Flex-alignCenter"
      >
        <span
          className="UserBoxUnauthenticated-joinText coral coral-viewerBox-joinText"
        >
          Join the conversation
        </span>
        <div
          className="UserBoxUnauthenticated-actions coral coral-viewerBox-actionButtons"
        >
          <button
            className="BaseButton-root Button-base Button-filled Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase UserBoxUnauthenticated-register coral coral-viewerBox-registerButton"
            data-variant="filled"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Register
          </button>
          <button
            className="BaseButton-root Button-base Button-outlined Button-fontSizeExtraSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeExtraSmall Button-colorPrimary Button-upperCase coral coral-viewerBox-signInButton"
            data-variant="outlined"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            Sign in
          </button>
        </div>
      </section>
      <div
        className="StreamContainer-rightStreamHeader"
      />
    </div>
    <section
      aria-label="Post a Comment"
    >
      <div
        className="coral coral-createComment"
      >
        <div
          className="MessageBox-root coral coral-createComment-message PostCommentFormClosed-messageBox"
        >
          <div
            className="Markdown-root MessageBoxContent-root MessageBoxContainer-withoutIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><strong>What do you think</strong>?</p>
",
              }
            }
          />
        </div>
        <div
          className="CallOut-root CallOut-mono CallOut-leftBorder coral coral-createComment-closed"
        >
          <div
            className="CallOut-container"
          >
            <div
              className="CallOut-icon CallOut-mono CallOut-leftIcon"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon"
              >
                feedback
              </i>
            </div>
            <div
              className="CallOut-content"
            >
              <div
                className="CallOut-title CallOut-titleSemiBold"
              >
                <div
                  className="Markdown-root"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<p>Story is closed</p>
",
                    }
                  }
                />
              </div>
              <div
                className="CallOut-body"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      className="Box-root HorizontalGutter-root StreamContainer-tabBarContainer HorizontalGutter-spacing-4"
    >
      <nav
        aria-label="Secondary Tablist"
        className="Box-root Flex-root StreamContainer-tabBarRow coral coral-tabBarSecondary-row Flex-flex Flex-justifySpaceBetween Flex-alignFlexEnd Flex-directionRow"
      >
        <ul
          className="TabBar-root TabBar-streamSecondary coral coral-tabBarSecondary coral-tabBarComments StreamContainer-tabBarRoot"
          role="tablist"
        >
          <li
            className="Tab-root"
            id="tab-ALL_COMMENTS"
            role="presentation"
          >
            <button
              aria-controls="tabPane-ALL_COMMENTS"
              aria-selected={true}
              className="BaseButton-root Tab-button Tab-streamSecondary Tab-active coral-tabBarSecondary-tab-active coral coral-tabBarSecondary-tab coral-tabBarComments-allComments"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              role="tab"
              type="button"
            >
              <div
                className="AriaInfo-root"
              >
                <span>
                  Tab:
                </span>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter gutter Flex-spacing-1"
              >
                <span>
                  All Comments
                </span>
                <div
                  className="AriaInfo-root"
                >
                  (
                </div>
                <span
                  className="Counter-root Counter-colorInherit Counter-sizeSmall coral coral-counter"
                >
                  <span
                    className="Counter-text"
                  >
                    0
                  </span>
                </span>
                <div
                  className="AriaInfo-root"
                >
                  )
                </div>
              </div>
            </button>
          </li>
        </ul>
        <div
          className="Box-root Flex-root StreamContainer-sortMenu coral coral-sortMenu Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter gutter"
        >
          <label
            className="SortMenu-label"
            htmlFor="coral-comments-sortMenu"
          >
            Sort by
          </label>
          <span
            className="SelectField-root coral coral-sortMenu"
          >
            <select
              className="SelectField-select SortMenu-select SelectField-selectFont SortMenu-selectFont SelectField-selectColor SortMenu-selectColor coral-selectField"
              id="coral-comments-sortMenu"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              value="CREATED_AT_DESC"
            >
              <option
                value="CREATED_AT_DESC"
              >
                Newest
              </option>
              <option
                value="CREATED_AT_ASC"
              >
                Oldest
              </option>
              <option
                value="REPLIES_DESC"
              >
                Most replies
              </option>
              <option
                value="REACTION_DESC"
              >
                Most Respected
              </option>
            </select>
            <span
              aria-hidden={true}
              className="SelectField-afterWrapper"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon"
              >
                expand_more
              </i>
            </span>
          </span>
        </div>
      </nav>
      <section
        aria-labelledby="tab-ALL_COMMENTS"
        className="coral coral-allComments"
        id="tabPane-ALL_COMMENTS"
      >
        <div
          aria-live="off"
          className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
          data-testid="comments-allComments-log"
          id="comments-allComments-log"
          role="log"
        >
          <div
            className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
          >
            <div
              className="CallOut-inner"
            >
              There are no comments on this story.
            </div>
          </div>
          <div
            data-virtuoso-scroller={true}
            style={
              Object {
                "height": 0,
                "position": "relative",
              }
            }
          >
            <div
              data-viewport-type="window"
              style={
                Object {
                  "height": "100%",
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            >
              <div
                data-test-id="virtuoso-item-list"
                style={
                  Object {
                    "boxSizing": "border-box",
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  }
                }
              />
              <div />
            </div>
          </div>
          <nav
            aria-label="Comments Footer"
            className="CommentsLinks-container coral coral-streamFooter"
          >
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-commentsTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of comments"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                forum
              </i>
              <span>
                Top of comments
              </span>
            </button>
            <button
              className="BaseButton-root Button-root Button-sizeRegular CommentsLinks-sizeRegular Button-colorRegular CommentsLinks-colorRegular Button-variantTextUnderlined Button-iconLeft CommentsLinks-link coral coral-streamFooter-link coral-streamFooter-articleTopLink"
              data-variant="textUnderlined"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              title="Go to top of article"
              type="button"
            >
              <i
                aria-hidden="true"
                className="Icon-root Icon-sm coral coral-icon ButtonIcon-root CommentsLinks-icon"
              >
                description
              </i>
              <span>
                Top of article
              </span>
            </button>
          </nav>
        </div>
      </section>
    </div>
  </div>
</section>
`;
